ndim-utils 0.6.x
  * one: prevent filesystem deduplication from working
  * Add --help and --version option to (almost) all executables
  * rpm: ship xnest script in subpackage
  * Stop installing ps2lj4 and list-debuginfo-rpms
  * new man page watch-xsel(1)
  * fixed escaping and formatting for all man pages
  * watch-xsel: Add --append=FILE argument.
  * watch-xsel: Add --lineno argument.
  * watch-xsel: Add --max-lines=NO argument.
  * watch-xsel: Add --regexp=RE argument.
  * watch-xsel: Add --skip-list=FILE argument.
  * watch-xsel: Add --verbose argument.
  * watch-xsel: Add --xsel-timeout=MS argument.
  * watch-xsel: Stop printing stacktraces on Ctrl-C, which is the
    normal way to exit watch-xsel.

ndim-utils 0.6
  * Migrate to newer build-helpers/
  * Fixed and updated RPM generation
  * Install ndim-utils.sh into /etc/profile.d/ (with mkcd shell command)
  * Parallelize build system
  * Add watch-xsel script
  * params: report more details, and print to different output channels
  * Stop installing obsolete scripts (np, umlxterm, Palm Pilot stuff)
  * Add one(1) man page

ndim-utils 0.5
  * percheck: add POSIX ACL support (--acl option)

ndim-utils 0.4.3
  * New versioning scheme using git tags.
  * Add strace-normalize script.

ndim-utils 0.2.4
  * Fix RPM creation.

ndim-utils 0.2.3
  * Add built-in RPM support.
  * Add SELinux support to percheck.
  * Avoid downloading whoislist.gz if possible.

ndim-utils 0.2.2
  * Add list-debuginfo-rpms script.

ndim-utils 0.2.1
  First release with NEWS.